fix bg bleeding

--- a/src/scss/_intro.scss
+++ b/src/scss/_intro.scss
@@ -36,4 +36,8 @@
       height: 100%;
     }
   }
+
+  ~ * {
+    z-index: 1;
+  }
 }
